# OS_labs

OS_labs/lab1/: report.odt
OS_labs/lab2/doc/: report.odt
OS_labs/lab2/src/: CMakeLists.txt  main.c
OS_labs/lab3/doc/: report.odt
OS_labs/lab3/src/: CMakeLists.txt  main.c
OS_labs/lab4/doc/: report.odt
OS_labs/lab4/src/: CMakeLists.txt  main_v2.c
OS_labs/lab5/doc/: report.odt
OS_labs/lab5/src/: CMakeLists.txt  compile_linking_test.c  f_deque.c  f_deque.h  runtime_test.c
OS_labs/lab6/doc/: report.odt
OS_labs/lab6/src/: CMakeLists.txt  compute_node.cpp  control_node.cpp  functions.cpp  functions.h
